    (cmb)

- Curl:
  . Fixed CURLOPT_TLSAUTH_TYPE is not treated as a string option. (Pierrick)

- Date:
  . Fixed bug #74671 (DST timezone abbreviation has incorrect offset). (Derick)
  . Fixed bug #77243 (Weekdays are calculated incorrectly for negative years).
    (Derick)
  . Fixed bug #78139 (timezone_open accepts invalid timezone string argument).
    (Derick)

- MBString:
  . Fixed bug GH-8685 (pcre not ready at mbstring startup). (Remi)

- ODBC:
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- OpenSSL:
  . Fixed bug #50293 (Several openssl functions ignore the VCWD).
    (Jakub Zelenka, cmb)
  . Fixed bug #81713 (NULL byte injection in several OpenSSL functions working
    with certificates). (Jakub Zelenka)

- PDO_ODBC:
  . Fixed errorInfo() result on successful PDOStatement->execute(). (Yurunsoft)
  . Fixed handling of single-key connection strings. (Calvin Buckley)

- Zip:
  . Fixed bug GH-8781 (ZipArchive::close deletes zip file without updating stat
    cache). (Remi)

09 Jun 2022, PHP 8.0.20

- CLI:
  . Fixed bug GH-8575 (CLI closes standard streams too early). (Levi Morrison)

- Core:
  . Fixed Haiku ZTS builds. (David Carlier)

- Date:
  . Fixed bug #72963 (Null-byte injection in CreateFromFormat and related
    functions). (Derick)
  . Fixed bug GH-8471 (Segmentation fault when converting immutable and mutable
    DateTime instances created using reflection). (Derick)

- FPM:
  . Fixed ACL build check on MacOS. (David Carlier)
  . Fixed bug #72185: php-fpm writes empty fcgi record causing nginx 502.
    (Jakub Zelenka, loveharmful)
  . Fixes use after free. (Heiko Weber).

- Mysqlnd:
  . Fixed bug #81719: mysqlnd/pdo password buffer overflow. (CVE-2022-31626)
    (c dot fol at ambionics dot io)

- OPcache:
  . Fixed bug GH-8466 (ini_get() is optimized out when the option does not
    exist). (Arnaud)

- Pgsql:
  . Fixed bug #81720: Uninitialized array in pg_query_params().
    (CVE-2022-31625) (cmb)

- Pcntl: